# nexuslua

./: .gitignore  README.md
src/: CMakeLists.txt  config.hpp.cmake  main.cpp  main.hpp  test.cpp
src/testing-resources/: calibrate_idle_time_limit.lua  configuration.lua  demo1.lua  demo2.lua  demo3.lua  demo4.lua  demo5.lua  demo5_fast.lua  demo5b.lua  error.lua  hello.lua  helper-functions.lua  invert-and-save.lua  measuretime.sh  measuretime_and_log.sh  numbers.lua  prime.lua  prime_parallel.lua  test-cmdline-params.lua  test_merge_on_reply.lua  time.lua  time2.lua  time_lua.sh  time_nexuslua.sh
